2004-12-11  Martin Baulig  <martin@ximian.com>

	* metadata.c (mono_metadata_load_generic_params): Added
	`MonoGenericContainer *parent_container' argument; automatically
	compute `container->is_method'; pass the correct owner to
	get_constraints().	

	* reflection.c (compare_genericparam): Sort the GenericParam table
	according to increasing owners.	

Fri Dec 10 18:43:46 CET 2004 Paolo Molaro <lupus@ximian.com>

	* profiler.c: allow disabling the default profiler.

Fri Dec 10 18:42:11 CET 2004 Paolo Molaro <lupus@ximian.com>

	* decimal.c, icall.c: allow disabling System.Decimal support.

2004-12-09  Marek Safar <marek.safar@seznam.cz>

	* reflection.c: Add support for null attribute arguments.

2004-12-09  Martin Baulig  <martin@ximian.com>

	* metadata.h, loader.h: Use `idx' instead of `index' in parameter
	names to get rid of compiler warnings.

2004-12-08  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.c (mono_marshal_get_struct_to_ptr): Call 
	mono_marshal_load_type_info (). Fixes #69625.
	(mono_marshal_get_ptr_to_struct): Likewise.

2004-12-08  Martin Baulig  <martin@ximian.com>

	* mono-debug.h: Bumped version number to 47.

	* mono-debug-debugger.c
	(mono_debugger_event_handler, mono_debugger_event): Take two
	guint64 arguments insteed of a gpointer and a guint32.	

2004-12-08  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.h
	(MonoDebugLineNumberEntry): Renamed `offset' to `il_offset' and
	`address' to `native_offset'.

2004-12-08  Martin Baulig  <martin@ximian.com>

	* class.c (mono_class_create_from_typespec): Only inflate if we
	either have `context->gclass' or `context->gmethod'.

2004-12-08  Zoltan Varga  <vargaz@freemail.hu>

	* metadata-internals.h (MonoAssembly): Add 'corlib_internal' field.

	* object-internals.h (MonoReflectionAssemblyBuilder): Move 'corlib_internal' field from Assembly to AssemblyBuilder.

	* reflection.c (mono_image_basic_init): Initialize assembly->corlib_internal from the assembly builder.
