@@ -1,3 +1,8 @@
+2004-12-12  Martin Baulig  <martin@ximian.com>
+
+	* mono-debug-debugger.c (write_type): If we're an enum and the
+	builtin types have already been initialized, call mono_class_init().
+
 2004-12-11  Martin Baulig  <martin@ximian.com>
 
 	* metadata.c (mono_metadata_load_generic_params): Added
